--- a/20251215/1교시 복습.md
+++ b/20251215/1교시 복습.md
@@ -47,21 +47,53 @@
 </body>
 </html>
 ```
-- **a**라는 태그 때문에 밑줄이 그어짐(css로 수정 가능) 이동하는 애라는 설명이 더 정확할듯
-- **href**는 이동 대상임 페이지가 될 수도 위치가 될 수도 있음
+- `a`라는 태그 때문에 밑줄이 그어짐(`css`로 수정 가능) 이동하는 애라는 설명이 더 정확할듯
+- `href`는 이동 대상임 페이지가 될 수도 위치가 될 수도 있음
 - 밑줄 쳐진 대상에 커서를 가져다 대면 페이지 하단에 주소가 뜸
-- java로 이동 시킬 경우에는 하단에 주소가 안 뜸
+- `java`로 이동 시킬 경우에는 하단에 주소가 안 뜸
+
+```HTML
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+	<link rel="icon" href="../images/logo.png"/>
+    ti<title>Document</title>
+</head>
+  <body>
+	<h1>Web Document</h1>
+    <ol>
+		<li><a href="study01">HTML 문서 소개</a></li> 
+		<li><a href="study02">태그 알아보기</a></li> 
+		<li><a href="study03">폼 알아보기</a></li> 
+		<li><a href="study04">iframe 알아보기</a></li>
+		<li><a href="study05">나머지 태그 알아보기</a></li>
+		<li><a href="study06">선택자 알아보기</a></li>
+		<li><a href="study07">폰트 알아보기</a></li>
+		<li><a href="study08">가상 클래스 알아보기</a></li>
+		<li><a href="study09">background 알아보기</a></li>
+		<li><a href="study10">Box Model 알아보기</a></li>
+		<li><a href="study11">정렬 알아보기</a></li>
+		<li><a href="study12">영역 알아보기</a></li>
+		<li><a href="study13">javascript 알아보기</a></li>
+		<li><a href="study14">Dialog 알아보기</a></li>
+		<li><a href="study15">제어문 알아보기</a></li>
+		<li><a href="study16">함수 알아보기</a></li>
+	</ol>
+</body>
+</html>
+```
+ - `<meta name="viewport" content="width=device-width, initial-scale=1.0">`: 반응형(휴대폰, 태블릿 크기), 폰 세로가로 맞추는 것
+ -  `<link rel="icon" href="../images/logo.png"/>`: 탭에 있는 이미지를 정의하는 값 (github의 고양이)
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-  UTF-8: 언어를 한국어로
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  width: 반응형(휴대폰, 태블릿 크기), 폰 세로가로 맞추는 것
 	<link rel="icon" href="../images/logo.png"/>
-  탭에 있는 이미지를 정의하는 값 (github의 고양이)ti<title>Document</title>
-  창 이름
+    ti<title>Document</title>
 </head>
   <body>
 	<h1>Web Document</h1>
@@ -88,15 +120,15 @@
 
 #URL 복습 (모든 URL은 URI다) <br />
 목적: 자원 위치+접근 방법 / 위치정보: 필수 <br />
-http(HyperText Transfer Protocol): W3 정보 공유 시스템 웹에서 정보를 주고 받을 수 있는 통신 프로토콜을 말합니다. <br />
-host & domain: IP 주소를 대신하는 사람이 기억하기 쉬운 웹사이트 이름 입니다. <br />
-port: 해당 domain에서 서비스 접속하는 TCP/UDP의 포트 입니다. <br />
-contextPath: 웹 애플리케이션의 서버 상의 상대적인 경로를 말합니다. <br />
-queryString: 특정 매개변수에 값을 할당하는 균일 자원 지시자의 일부 입니다. <br />
+`http(HyperText Transfer Protocol)`: W3 정보 공유 시스템 웹에서 정보를 주고 받을 수 있는 통신 프로토콜을 말합니다. <br />
+`host & domain`: IP 주소를 대신하는 사람이 기억하기 쉬운 웹사이트 이름 입니다. <br />
+`por`t: 해당 domain에서 서비스 접속하는 TCP/UDP의 포트 입니다. <br />
+`contextPath`: 웹 애플리케이션의 서버 상의 상대적인 경로를 말합니다. <br />
+`queryString`: 특정 매개변수에 값을 할당하는 균일 자원 지시자의 일부 입니다. <br />
 
 #URI 복습 <br />
-web page에 **기본은 index**이고 생략이 가능함 (위치 정보 필수 아님) <br />
-이거 중요한 이유: 나중에 react를 배울 때 필요함 <br />
+`web page`에 **기본은 index**이고 생략이 가능함 (위치 정보 필수 아님) <br />
+이거 중요한 이유: 나중에 `react`를 배울 때 필요함 <br />
 페이지가 열리지 않는 이유와 연결됨 <br />
 
 ```HTML
@@ -149,28 +181,17 @@ web page에 **기본은 index**이고 생략이 가능함 (위치 정보 필수 
 </body>
 </html>
 ```
-- ol: **order**이라서 리스트의 가장 큰 개념
-- li class="li": 버튼
-- a href="page1.html">PAGE1</a: 버튼을 눌렀을 때 이동하는 위치를 설정한 것
+- `ol`: **order**이라서 리스트의 가장 큰 개념
+- `li class="li`: 버튼
+- `a href="page1.html">PAGE1</a`: 버튼을 눌렀을 때 이동하는 위치를 설정한 것
 
 <!DOCTYPE html>
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>기본페이지</title>
 	<link rel="icon" href="../../images/logo.png"/>
 	<link rel="stylesheet" href="../../css/default.css"/>
-	<style>
-		h1, h2, h3, h4, h5, h6 { margin: 0; padding: 10px 0; font-weight: normal; }
-		.h1 { text-align: center !important; }
-		.h2 { text-align: start; padding: 0 30px; }
-		.h3 { text-align: end; padding: 0 30px; }
-		#ul { list-style-type: circle; }
-		.li { display: inline; padding: 5px; margin: 0 5px; border-radius: 5%; background-color: aquamarine;}
-		.li:hover { box-shadow: 2px 2px 2px 1px rgb(0 0 255 / 0.2); cursor: pointer; }
-		.li a { text-decoration: none; color: black; font-weight: bold; }
-	</style>
 </head>
 <body>
 	<h1 class="h1" style="text-align: end;">
@@ -202,7 +223,6 @@ web page에 **기본은 index**이고 생략이 가능함 (위치 정보 필수 
 </body>
 </html>
 
-
 ##study_02
 ```HTML
 <!DOCTYPE html>
@@ -229,13 +249,13 @@ web page에 **기본은 index**이고 생략이 가능함 (위치 정보 필수 
 </body>
 </html>
 ```
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="../../images/logo.png"/>
-	<title>태그 알아보기</title>
 </head>
 <body>
 	<h1>태그 알아보기</h1>
