--- a/20251215/5교시 실습.md
+++ b/20251215/5교시 실습.md
@@ -1,38 +1,4 @@
-내 코드
-```HTML
-<!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial scale=1.0">
-    <title>Document</title>
-    <style>
-      * {box-sizing: boarder-box;}
-      html, body {margin: 10px;}
-      input {}
-      div {height: 30px; width: 100%;}
-      button {width: 100%; text-align: center; background-color: blue; border-style:ridge 5%;}
-    </style>
-  </head>
-  <body>
-    <form>
-        <div>
-            <label for="">글자:</label>
-            <input type="text" id="txt" required placeholder="글자를 입력해주세요.">
-        </div>
-        <div>
-            <label for="">숫자:</label>
-            <input type="number" id="txt" required placeholder="10부터 입력해주세요.">
-        </div>
-        <div>
-            <label for="">파일:</label>
-            <input type="number" id="txt" required placeholder="파일 선택">
-            <label for="">선택된 파일 없음</label>
-        </div>
-        <button type="submit">업로드</button>
-    </form>
-  </body>
-  ```
+
   강사님 코드
   ```HTML
 <!DOCTYPE html>
@@ -70,3 +36,45 @@
 </body>
 </html>
 ```
+- form을 넣어야 여백이 생긴다
+- `div`를 `display: flex`해야 된다
+- `input`의 너비를 작성하기 위해서 `cal(100% - 50px)`이렇게 계산해줘야한다
+- 글자가 들어가는건 `txt`
+- 숫자가 들어가는건 `num`
+- 파일이 들어가는건 `file`
+
+오답: 나의 잘못된 코드
+```HTML
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial scale=1.0">
+    <title>Document</title>
+    <style>
+      * {box-sizing: boarder-box;}
+      html, body {margin: 10px;}
+      input {}
+      div {height: 30px; width: 100%;}
+      button {width: 100%; text-align: center; background-color: blue; border-style:ridge 5%;}
+    </style>
+  </head>
+  <body>
+    <form>
+        <div>
+            <label for="">글자:</label>
+            <input type="text" id="txt" required placeholder="글자를 입력해주세요.">
+        </div>
+        <div>
+            <label for="">숫자:</label>
+            <input type="number" id="txt" required placeholder="10부터 입력해주세요.">
+        </div>
+        <div>
+            <label for="">파일:</label>
+            <input type="number" id="txt" required placeholder="파일 선택">
+            <label for="">선택된 파일 없음</label>
+        </div>
+        <button type="submit">업로드</button>
+    </form>
+  </body>
+  ```
