--- a/20251215/5교시 실습.md
+++ b/20251215/5교시 실습.md
@@ -42,6 +42,7 @@
 - 글자가 들어가는건 `txt`
 - 숫자가 들어가는건 `num`
 - 파일이 들어가는건 `file`
+**- "선택된 파일 없음"이라는 문구를 내가 직접 넣는 것이 아닌 파일의 속성 때문에 자동으로 생기는 문구**
 
 오답: 나의 잘못된 코드
 ```HTML
