--- a/20251215/5교시 실습.md
+++ b/20251215/5교시 실습.md
@@ -55,6 +55,7 @@
 
 ```html
  <input type="file" id="file" multiple accept="png"/>
+ <input type="file" id="file" multiple accept="image/*"/>
 ```
 - 업로드 할 수 있는 파일 종류를 통제할 수 있음
 <br />
@@ -93,4 +94,4 @@
         <button type="submit">업로드</button>
     </form>
   </body>
-  ```
+```
