--- a/20251216/4교시(과제).md
+++ b/20251216/4교시(과제).md
@@ -67,21 +67,23 @@
 </body>
 ```
 내가 몰랐던 것들
-- 가장 처음에 해주면 좋은 것: *로 표시된 것들
+- **가장 처음에 해주면 좋은** 것: *로 표시된 것들
   - margin
   - padding
   - box-sizing: border-box
-- 사진을 가져오는 것
+- **사진**을 가져오는 것
   - bg를 이용하기
   - url로 같은 폴더에 저장한 이미지를 가져오기
   - 특정 화면 안에 사진이 꽉차지 않을 경우 반복이 되기 때문에 no-repeat을 넣어주기
+- .text에서 활용되는 transform: translate(-50%, -50%)
+  	이거를 하는 이유는 가운데 기준으로 top, left가 50%로 되어있는데 **중심점을 맨 위상단으로 바꿔주기** 위함
 
 내가 까먹는 것들
-- ul이랑 li를 이용하기
+- **ul이랑 li를 이용하기**
   얘네를 리스트 형태에서 일자정렬로 바꾸기 위해서는 1fr 1fr 1fr 1fr 을 이용하면 된다
 
 외우면 좋은 것
-색: 
+**색**: 
 - #fff = rgb (255, 255, 255) = white
 - #333 = grey
 - #000 = rgb (0, 0, 0) = black
