--- a/20251218/6교시-피드백.md
+++ b/20251218/6교시-피드백.md
@@ -1,7 +1,7 @@
-검색창이랑 버튼이랑 하나의 폼으로 묶어야 검색이 가능해짐
-지금처럼 하면 submit이 안 됨
+-검색창이랑 버튼이랑 하나의 폼으로 묶어야 검색이 가능해짐
+-지금처럼 하면 submit이 안 됨
 
-영역이 오버돼서 밑에 스크롤이 생김=overflow
-컨테이너나 마진의 이슈로 영역이 밀림 (100%로 맞춰야 함)
+-영역이 오버돼서 밑에 스크롤이 생김=overflow
+-컨테이너나 마진의 이슈로 영역이 밀림 (100%로 맞춰야 함)
 
-div row에 gap-3을 붙이면 위아래로 내려옴
+-div row에 gap-3을 붙이면 위아래로 내려옴
