--- a/20251219/1-2교시.md
+++ b/20251219/1-2교시.md
@@ -8,6 +8,9 @@
 - UX/UI와 AI 클라우드 등 탭을 분리
   - 실제 포트폴리오 제출용으로 효율적
   - 내 결과물들이 분류가 되기 때문에 체계적 관리가 쉬움
+ 
+다른 분들 포트폴리오 확인 가능 루트
+- https://shellfolders.github.io/ui/
 
  UI.html
 ```HTML
