--- a/20251219/5-6교시.md
+++ b/20251219/5-6교시.md
@@ -12,56 +12,56 @@
     - a.replaceALL("다", "하"):
     - '가나하라하라하라'
 
-**열고 닫는거 잘 하기!!**
-e.g., 따옴표 열기만하고 닫지 않는다거나 (마치 <div></div> 하는 것처럼)
+**열고 닫는거 잘 하기!!**<br />
+e.g., 따옴표 열기만하고 닫지 않는다거나 (마치 <div></div> 하는 것처럼)<br />
 
-특징: 노란색으로 replace가 되어있으면 오타 없이 잘 되어 있다는 뜻
+특징: 노란색으로 replace가 되어있으면 오타 없이 잘 되어 있다는 뜻<br />
 
     // 1. 문자열.substring(시작 인덱스, 끝 인덱스)
-- const today2 = "Good~";
-- console. log(today2.length);
-- console. log(today2.substring(1, 4)));
-<. 5
-<. ood
-기억할 것: 0G1o2o3d4~5 라서 위처럼 나옴
+- const today2 = "Good~";<br />
+- console. log(today2.length);<br />
+- console. log(today2.substring(1, 4)));<br />
+<. 5<br />
+<. ood<br />
+기억할 것: 0G1o2o3d4~5 라서 위처럼 나옴<br />
 
-특징: index는 0에서부터 시작함
-특징: java는 인덱스 over라는 개념이 없음 (파이썬은 있음)
-e.g., var today2 = "Good~Goo~Goo~":
-	  today2.substring(5, today2.length): <!--length는 전체길이를 생각해--> <!--substring은 
-	<.Goo~Goo~
+특징: index는 0에서부터 시작함<br />
+특징: java는 인덱스 over라는 개념이 없음 (파이썬은 있음)<br />
+e.g., var today2 = "Good~Goo~Goo~":<br />
+	  today2.substring(5, today2.length): <!--length는 전체길이를 생각해--> <!--substring은 <br />
+	<.Goo~Goo~<br />
 
 	// 2. 문자열.slice(시작 인덱스, 끝 인덱스)
-- const today2 = "Good~";
-- console.log(today2.slice(1, 5));
-- console.log(today2.slice(1));
-- console.log(today2.slice(-4));
-<. ood~
-<. ood~
-<. ood~
-  G(-4)o(-3)o(-2)d(-1)~(0)
-  이렇게 된거라서
+- const today2 = "Good~";<br />
+- console.log(today2.slice(1, 5));<br />
+- console.log(today2.slice(1));<br />
+- console.log(today2.slice(-4));<br />
+<. ood~<br />
+<. ood~<br />
+<. ood~<br />
+  G(-4)o(-3)o(-2)d(-1)~(0)<br />
+  이렇게 된거라서<br />
 
-- console.log(today.split('d'))
-<. (2) ['Goo', '~']
+- console.log(today.split('d'))<br />
+<. (2) ['Goo', '~']<br />
 
-- var a = "가나다가나다가나다";
-- a.split('나다')
-<. (4) ['가', '가', '가', '']
-특징:    0     1     2    3 가 이들의 index이다.
-특징: length는 다르기 때문에
-b[b.length]
-<.undefined
-b[b.length-1]
-<.""
+- var a = "가나다가나다가나다";<br />
+- a.split('나다')<br />
+<. (4) ['가', '가', '가', '']<br />
+특징:    0     1     2    3 가 이들의 index이다.<br />
+특징: length는 다르기 때문에<br />
+b[b.length]<br />
+<.undefined<br />
+b[b.length-1]<br />
+<.""<br />
   
-- var a = "가나다가나다";
-- a.split('나다') <!--split은 '생략'이라고 표현-->
-<. (4) ['가', '가', ''] <!--[]는 배열이라고 한다. 그 안의 위치는 index라고 한다-->
+- var a = "가나다가나다";<br />
+- a.split('나다') <!--split은 '생략'이라고 표현--><br />
+<. (4) ['가', '가', ''] <!--[]는 배열이라고 한다. 그 안의 위치는 index라고 한다--><br />
 
-- var a = "가나다가나다가나다";
-- var b = a.split(''); <!--이 구분자는 문자 하나를 기준으로 한 것이다-->
-<.(9) ['가', '나', '다', '가', '나', '다', '가', '나', '다']
+- var a = "가나다가나다가나다";<br />
+- var b = a.split(''); <!--이 구분자는 문자 하나를 기준으로 한 것이다--><br />
+<.(9) ['가', '나', '다', '가', '나', '다', '가', '나', '다']<br />
 
 ```
 <!DOCTYPE html>
