--- a/20251219/5-6교시.md
+++ b/20251219/5-6교시.md
@@ -63,6 +63,29 @@ b[b.length-1]<br />
 - var b = a.split(''); <!--이 구분자는 문자 하나를 기준으로 한 것이다--><br />
 <.(9) ['가', '나', '다', '가', '나', '다', '가', '나', '다']<br />
 
+	// 특정 문자 추가<br />
+    // 문법 : 문자열.padStart(문자열 전체 길이, '추가할 문자')<br />
+- console.log(today.padStart(10, '*'))<br />
+<.*****Good~<br />
+pad를 패딩의 개념으로 보고 ***** 5개의 별을 (start)Good~ 시작점에 두는 것<br />
+
+// 특정 문자의 위치(index) 리턴<br />
+// - 있음 : 탐색된 첫 번째 문자의 인덱스 리턴<br />
+// - 없음 : -1 리턴<br />
+// const today = 'Good~';<br />
+console.log(today.indexOf('o'))<br />
+console.log(today.indexOf('Go'))<br />
+console.log(today.indexOf('h'))<br />
+인덱스값 일일이 계산하기 힘들 때 사용<br />
+
+// 공백 제거 <!--공백이 생겨서 글자를 밀 때--><br />
+const say = '  Hi~  ';<br />
+console.log(say);<br />
+console.log('|'+say+'|');<br />
+console.log('|'+say.trimStart()+'|'); // 왼쪽 공백 제거<br />
+console.log('|'+say.trimEnd()+'|'); // 오른쪽 공백 제거<br />
+console.log('|'+say.trim()+'|'); // 양쪽 공백 제거<br />
+
 ```
 <!DOCTYPE html>
 <html lang="ko">
