--- a/20251219/5-6교시.md
+++ b/20251219/5-6교시.md
@@ -1,49 +1,74 @@
+```
+const today = "Good~";
+```
+
+**오늘의 피드백**<br />
+- 열고 닫는거 잘 하기<br />
+- e.g., 따옴표 열기만하고 닫지 않는다거나 (마치 `<div></div>` 하는 것처럼)<br />
+
+- 특징: 노란색으로 replace가 되어있으면 오타 없이 잘 되어 있다는 뜻<br />
+
+**문자열 길이**
+```
+console.log('문자열 길이 :', today.length)
+```
 - var a = "가나다라":
     - a.length
     - 문자열이기 때문에 length를 사용할 수 있다
 - var a = 10:
-    - a.
+    - a.~~length~~
     - 숫자이기 때문에 뒤에 length가 올 수 없다
+
+**특정 문자 변경**<br />
+```
+일치하는 첫 번째만 변경
+console.log(today.replace('o', 'ap-'))
+일치하는 모두 변경
+console.log(today.replaceAll('o', 'ap-'))
+```
 - var a = "가나다라다라다라":
     - a.replace("다", "하"):
-    - '가나하라다라다라
+    - '가나**하**라다라다라'
     - 첫번째 "다"만 "하"로 대체 됨
   그렇다면 다 대체하기 위해서는?
     - a.replaceALL("다", "하"):
-    - '가나하라하라하라'
+    - '가나**하**라**하**라**하**라'
 
-**열고 닫는거 잘 하기!!**<br />
-e.g., 따옴표 열기만하고 닫지 않는다거나 (마치 <div></div> 하는 것처럼)<br />
 
-특징: 노란색으로 replace가 되어있으면 오타 없이 잘 되어 있다는 뜻<br />
-
-    // 1. 문자열.substring(시작 인덱스, 끝 인덱스)
+**특정 위치의 문자 추출**<br />
+*1. 문자열.substring(시작 인덱스, 끝 인덱스)*
+```
 - const today2 = "Good~";<br />
 - console. log(today2.length);<br />
 - console. log(today2.substring(1, 4)));<br />
-<. 5<br />
-<. ood<br />
-기억할 것: 0G1o2o3d4~5 라서 위처럼 나옴<br />
+```
+- `<. 5<br />`: 기억할 것은 0 G 1 o 2 o 3 d 4 ~ 5 라서 `5<br />`처럼 나옴<br />
+- `<. ood<br />`
 
-특징: index는 0에서부터 시작함<br />
-특징: java는 인덱스 over라는 개념이 없음 (파이썬은 있음)<br />
-e.g., var today2 = "Good~Goo~Goo~":<br />
-	  today2.substring(5, today2.length): <!--length는 전체길이를 생각해--> <!--substring은 <br />
-	<.Goo~Goo~<br />
+- 특징: index는 0에서부터 시작함<br />
+- 특징: java는 인덱스 over라는 개념이 없음 (파이썬은 있음)<br />
+- e.g.,<br />
+`var today2 = "Good~Goo~Goo~":`<br />
+` today2.substring(5, today2.length): <!--length는 전체길이를 생각해-->` <br />
+`<.Goo~Goo~<br />`
 
-	// 2. 문자열.slice(시작 인덱스, 끝 인덱스)
+*2. 문자열.slice(시작 인덱스, 끝 인덱스)*
+```
 - const today2 = "Good~";<br />
 - console.log(today2.slice(1, 5));<br />
 - console.log(today2.slice(1));<br />
 - console.log(today2.slice(-4));<br />
-<. ood~<br />
-<. ood~<br />
-<. ood~<br />
-  G(-4)o(-3)o(-2)d(-1)~(0)<br />
-  이렇게 된거라서<br />
+```
+- `<. ood~<br />`
+- `<. ood~<br />`
+- `<. ood~<br />`
+- 답이 다 똑같은 이유: G(-4)o(-3)o(-2)d(-1)~(0)<br />
 
-- console.log(today.split('d'))<br />
-<. (2) ['Goo', '~']<br />
+**특정 문자 기준으로 분리(쪼개기)**
+```
+console.log(today.split('d'))
+```
+- `<. (2) ['Goo', '~']`<br />
 
 - var a = "가나다가나다가나다";<br />
 - a.split('나다')<br />
