--- a/20251219/5-6교시.md
+++ b/20251219/5-6교시.md
@@ -7,6 +7,7 @@ const today = "Good~";
 - e.g., 따옴표 열기만하고 닫지 않는다거나 (마치 `<div></div>` 하는 것처럼)<br />
 
 - 특징: 노란색으로 replace가 되어있으면 오타 없이 잘 되어 있다는 뜻<br />
+<br />
 
 **문자열 길이**
 ```
@@ -18,6 +19,7 @@ console.log('문자열 길이 :', today.length)
 - var a = 10:
     - a.~~length~~
     - 숫자이기 때문에 뒤에 length가 올 수 없다
+<br />
 
 **특정 문자 변경**<br />
 ```
@@ -28,57 +30,59 @@ console.log(today.replaceAll('o', 'ap-'))
 ```
 - var a = "가나다라다라다라":
     - a.replace("다", "하"):
-    - '가나**하**라다라다라'
+    - `'가나하라다라다라'`
     - 첫번째 "다"만 "하"로 대체 됨
   그렇다면 다 대체하기 위해서는?
     - a.replaceALL("다", "하"):
-    - '가나**하**라**하**라**하**라'
-
+    - `'가나하라하라하라'`
+<br />
 
 **특정 위치의 문자 추출**<br />
 *1. 문자열.substring(시작 인덱스, 끝 인덱스)*
 ```
-- const today2 = "Good~";<br />
-- console. log(today2.length);<br />
-- console. log(today2.substring(1, 4)));<br />
+const today2 = "Good~";
+console. log(today2.length);
+console. log(today2.substring(1, 4));
 ```
-- `<. 5<br />`: 기억할 것은 0 G 1 o 2 o 3 d 4 ~ 5 라서 `5<br />`처럼 나옴<br />
-- `<. ood<br />`
+- `<. 5`<br />
+  - 기억할 것: 0 G 1 o 2 o 3 d 4 ~ 5 라서 위처럼 나옴<br />
+- `<. ood`<br />
 
 - 특징: index는 0에서부터 시작함<br />
 - 특징: java는 인덱스 over라는 개념이 없음 (파이썬은 있음)<br />
-- e.g.,<br />
+	- e.g.,<br />
 `var today2 = "Good~Goo~Goo~":`<br />
 ` today2.substring(5, today2.length): <!--length는 전체길이를 생각해-->` <br />
-`<.Goo~Goo~<br />`
+`<.Goo~Goo~`<br />
 
 *2. 문자열.slice(시작 인덱스, 끝 인덱스)*
 ```
-- const today2 = "Good~";<br />
-- console.log(today2.slice(1, 5));<br />
-- console.log(today2.slice(1));<br />
-- console.log(today2.slice(-4));<br />
+const today2 = "Good~";
+console.log(today2.slice(1, 5));
+console.log(today2.slice(1));
+console.log(today2.slice(-4));
 ```
-- `<. ood~<br />`
-- `<. ood~<br />`
-- `<. ood~<br />`
+- `<. ood~`<br />
+- `<. ood~`<br />
+- `<. ood~`<br />
 - 답이 다 똑같은 이유: G(-4)o(-3)o(-2)d(-1)~(0)<br />
+<br />
 
 **특정 문자 기준으로 분리(쪼개기)**
 ```
 console.log(today.split('d'))
 ```
 - `<. (2) ['Goo', '~']`<br />
-
-- var a = "가나다가나다가나다";<br />
-- a.split('나다')<br />
-<. (4) ['가', '가', '가', '']<br />
-특징:    0     1     2    3 가 이들의 index이다.<br />
-특징: length는 다르기 때문에<br />
-b[b.length]<br />
-<.undefined<br />
-b[b.length-1]<br />
-<.""<br />
+- 응용:
+	- var a = "가나다가나다가나다";<br />
+	- a.split('나다')<br />
+	`(4) ['가', '가', '가', '']`<br />
+- 특징:   0     1     2    3 가 이들의 index이다.<br />
+- 특징: length는 다르기 때문에<br />
+- b[b.length]<br />
+- <.undefined<br />
+- b[b.length-1]<br />
+- <.""<br />
   
 - var a = "가나다가나다";<br />
 - a.split('나다') <!--split은 '생략'이라고 표현--><br />
@@ -87,30 +91,39 @@ b[b.length-1]<br />
 - var a = "가나다가나다가나다";<br />
 - var b = a.split(''); <!--이 구분자는 문자 하나를 기준으로 한 것이다--><br />
 <.(9) ['가', '나', '다', '가', '나', '다', '가', '나', '다']<br />
+  <br />
 
-	// 특정 문자 추가<br />
-    // 문법 : 문자열.padStart(문자열 전체 길이, '추가할 문자')<br />
-- console.log(today.padStart(10, '*'))<br />
-<.*****Good~<br />
+**특정 문자 추가<br />
+*문법 : 문자열.padStart(문자열 전체 길이, '추가할 문자')*<br />
+```
+console.log(today.padStart(10, '*'))
+<.*****Good~
+```
 pad를 패딩의 개념으로 보고 ***** 5개의 별을 (start)Good~ 시작점에 두는 것<br />
+<br />
 
-// 특정 문자의 위치(index) 리턴<br />
-// - 있음 : 탐색된 첫 번째 문자의 인덱스 리턴<br />
-// - 없음 : -1 리턴<br />
-// const today = 'Good~';<br />
-console.log(today.indexOf('o'))<br />
-console.log(today.indexOf('Go'))<br />
-console.log(today.indexOf('h'))<br />
-인덱스값 일일이 계산하기 힘들 때 사용<br />
+**특정 문자의 위치(index) 리턴**<br />
+- 있음 : 탐색된 첫 번째 문자의 인덱스 리턴<br />
+- 없음 : -1 리턴<br />
+```
+console.log(today.indexOf('o'))
+console.log(today.indexOf('Go'))
+console.log(today.indexOf('h'))
+인덱스값 일일이 계산하기 힘들 때 사용
+```
+<br />
 
-// 공백 제거 <!--공백이 생겨서 글자를 밀 때--><br />
-const say = '  Hi~  ';<br />
-console.log(say);<br />
-console.log('|'+say+'|');<br />
-console.log('|'+say.trimStart()+'|'); // 왼쪽 공백 제거<br />
-console.log('|'+say.trimEnd()+'|'); // 오른쪽 공백 제거<br />
-console.log('|'+say.trim()+'|'); // 양쪽 공백 제거<br />
+**공백 제거** <!--공백이 생겨서 글자를 밀 때--><br />
+```
+const say = '  Hi~  ';
+console.log(say);
+console.log('|'+say+'|');
+console.log('|'+say.trimStart()+'|'); // 왼쪽 공백 제거
+console.log('|'+say.trimEnd()+'|'); // 오른쪽 공백 제거
+console.log('|'+say.trim()+'|'); // 양쪽 공백 제거
+```
 
+<h1>전체 study13>page4.html></h1>
 ```
 <!DOCTYPE html>
 <html lang="ko">
@@ -184,6 +197,7 @@ console.log('|'+say.trim()+'|'); // 양쪽 공백 제거<br />
     console.log('|'+say.trim()+'|'); // 양쪽 공백 제거
   </script>
 </head>
+```
 <body>
 	<h1>개발자 모드 (F12) >> console 탭에서 확인하세요.</h1>
 </body>
