--- a/20251222/1교시.md
+++ b/20251222/1교시.md
@@ -66,6 +66,7 @@ why? 구조를 안바뀌게 하니까<br />
 - 변수는 index로 쓰임<br />
   - 첫번째 변수: 초기식 - 반복을 시작하기 전에 한 번만 실행<br />
       - 반복에 사용할 변수 선언<br />
+          반복문을 위한 변수이기 때문에 사용이 불가능하다는 뜻
       - 초기값 설정<br />
   - 두번째 변수: 조건식 - 매 반복마다 검사<br />
       - `true`면 반복<br />
