--- a/20251222/2교시.md
+++ b/20251222/2교시.md
@@ -34,7 +34,7 @@ for( ; i < 1 ; ) {
 }
 console.log(i);
 ```
-- `i = i + 1;`이게 뭔가 **증가시킬 영역**이기 때문에 세번째 콜롬에 넣어도 됨
+- `i = i + 1;`이게 **증감식**이기 때문에 세번째 콜롬에 넣어도 됨
 
 ```
 let i = 0;
@@ -44,3 +44,20 @@ for( ; i < 1 ;  i = i + 1 ) {
 console.log(i);
 ```
 **- 이렇게 for에 썼을 때 반복되는 공식이 더 쉽게 눈에 띄기 때문에 이렇게 쓰는 것을 추천한다**
+
+```
+for( let i = 0; i < 1 ;  i = i + 1 ) {
+    console.log("반복");
+}
+console.log(i);
+```
+**- 같은 원리로 ` let i = 0`의 내용을 첫번째 콜롬에 넣음**
+
+```
+for( let i = 0; i < 3 ;  i = i + 1 ) {
+    console.log("반복");
+}
+console.log(i);
+```
+- 이렇게하면 반복이 3번 됨
+- 회전수를 제약하기 위해서는 두번째 콜롬을 수정하면 됨
