--- a/20251222/2교시.md
+++ b/20251222/2교시.md
@@ -61,3 +61,26 @@ console.log(i);
 ```
 - 이렇게하면 반복이 3번 됨
 - 회전수를 제약하기 위해서는 두번째 콜롬을 수정하면 됨
+
+Q. 개별의 값을 꺼내게 하기 코드를 완성하시오.
+```
+const a = [1,2,3,4,5];
+for ( ; ; ) {
+    console.log('배열${인덱스} : ${값});
+}
+```
+A. 답
+```
+const a = [1,2,3,4,5];
+for ( let 인덱스 = 0 ; 인덱스 < a.length ; 인덱스 = 인덱스 + 1) {
+    console.log(`배열${인덱스} : ${ a[인덱스] }`);
+}
+```
+답 안 봤을 때 한 나의 실수
+- `인덱스`를 이용하지 않음 (i를 이용 - 이용하면 안되는건 아니지만 이렇게 할 경우 배열 뒤에도 i로 바꿔줘야 함)
+- `a.[인덱스]` 을 값으로 사용하지 않음
+- 두번째 콜롬에서 숫자를 대입하고 `a.length`를 사용하지 않음
+
+답을 보고 나서도 한 나의 실수
+- 백택(`)을 안 함
+- a뒤에 점(.)을 넣음
