--- a/20251222/3교시.md
+++ b/20251222/3교시.md
@@ -19,7 +19,7 @@ for (const index in a) {
 }
 ```
 
-<h3>FOR OF 문 (배열)(ㅂh3>
+<h3>FOR OF 문 (배열</h3>
 
 ```
 const a = [1,2,3,4,5];
@@ -58,3 +58,30 @@ a.forEach(event);
 - 함수를 만들고
 - 그 함수 안에 기능을 만들고
 - 그 기능을 이용해서 출력을 한다면 원하는 값을 꺼내쓸 수 있음
+
+여태까지한건 1차원 배열
+2차원 배열은 두가지 방향으로 가기 때문에 두가지 for문이 필요함 (중첩for문)
+
+<h3>중첩FOR 문 (근본)</h3>
+
+더하기 썼을 때 (보기 헷갈림)
+```
+for ( let i = 1; i <= 9 ; i++ ) {
+    for ( let j = 1; i <= 9 ; j++ ) {
+        console.log( i + "*" + j + " = " + (i*j));
+    }
+    console.log();
+}
+```
+백텍 쓰면 가독성 높아짐
+```
+for ( let i = 1; i <= 1 ; i++ ) {
+
+    for ( let j = 1; j <= 9 ; j++ ) {
+        console.log( `${i} * ${j} = ${i * j}` );
+    }
+    console.log();
+}
+```
+- for문(반복문) 할 땐 배열보단 숫자를 갖고 제어하는게 나음
+- ++의 의미는 후치의 형식으로 `+ 1`을 한 것
