--- a/20251222/4교시(Q).md
+++ b/20251222/4교시(Q).md
@@ -73,4 +73,7 @@ const 기호 = "■";
 - `console.log("기호")`를 넣음
 
 왜 이런 실수를 했는가?
-- `값 = 값 + 기호`를 생각하지 못함
+- “반복하면 자동으로 결과가 쌓일 것”이라고 생각함
+- 문자열은 직접 누적해서 저장해야 함
+- for문 = 무조건 i < 10 같은 횟수 반복하는게 아님
+- for문 = 초기화 / 조건 / 변화식을 자유롭게 설계하는 구조
