--- a/20251222/4교시(Q).md
+++ b/20251222/4교시(Q).md
@@ -22,6 +22,17 @@ for( ; ; )
 ```
 - `값 = 값 + 기호;`를 `값 += 기호;`로 써도 같음
 
+내가 헷갈린 부분들
+- 값과 변수 / 기호를 구분하지 못함
+  -  "■" 같은 문자 데이터를 숫자 변수 자리에 넣을 수 있다고 생각함
+  -  자료형 개념(type) 이 아직 분리되지 않은 상태
+- 몇 번 반복”과 “몇 개 출력”을 같은 것으로 착각
+  - 사고 흐름: ■가 10개니까 for문으로 여러 번 console.log 하면 되겠지?
+  - 실제 요구: 출력 1번
+  - 헷갈린 개념: 반복 횟수는 데이터를 만들기 위한 과정
+- 지금은 배열이 전혀 필요 없는 문제
+  - 헷갈린 개념: 반복문 = 배열과 관련 있음 (아님. 관련 없음.)
+
 <h3>직접 만들어보기2</h3>
 
 문제
