--- a/20251222/4교시(Q).md
+++ b/20251222/4교시(Q).md
@@ -22,6 +22,15 @@ for( ; ; )
 ```
 - `값 = 값 + 기호;`를 `값 += 기호;`로 써도 같음
 
+내 오답
+```
+const 기호 = "■";
+    for ( let i = ■ ; i < 6 ; i = i +1 )
+    {
+        console.log(`배열${i} : ${■}));
+    }
+```
+
 내가 헷갈린 부분들
 - 값과 변수 / 기호를 구분하지 못함
   -  "■" 같은 문자 데이터를 숫자 변수 자리에 넣을 수 있다고 생각함
