--- a/20251222/6교시(Q).md
+++ b/20251222/6교시(Q).md
@@ -24,11 +24,21 @@ const symbol1 = "☆";
 const symbol2 = "★";
 for( let i = 0; i < 9 ; i++ )
 {
-  // if(i % 2 !== 0){
-  //   값 = 값 + symbol2;
-  // } else {
-  //   값 = 값 + symbol1;
-  // }
+  if(i % 2 !== 0){
+  값 = 값 + symbol2;
+  } else {
+  값 = 값 + symbol1;
+  }
+}
+```
+
+Advanced 답
+```
+let 값 = "";
+const symbol1 = "☆";
+const symbol2 = "★";
+for( let i = 0; i < 9 ; i++ )
+{
   값 = (i % 2 !== 0) ? 값 + symbol2 : 값 + symbol1;
   console.log(값);
 }
