--- a/20251222/6교시(Q).md
+++ b/20251222/6교시(Q).md
@@ -75,3 +75,34 @@ for ( let i = 0 ; i < 10; i++)
 
  
 <h3>문제</h3>
+5-1) 1부터 10까지 숫자 중 홀수만 출력하세요.
+
+```
+출력값:
+1
+3
+5
+7
+9
+```
+
+내 답
+```
+const start = 1;
+const end1 = 10;
+const end2 = 20;
+const str = "javascript";
+const keyword = "a";
+for ( let i = start ; i <= end1 ; i++)
+{
+    if( i % 2 !==0) {
+        console.log(i)
+    }
+}
+```
+
+5-2) 1부터 20까지 숫자 중 3의 배수를 출력에 제외하세요.
+```
+
+```
+
