--- a/20251222/6교시(Q).md
+++ b/20251222/6교시(Q).md
@@ -103,6 +103,52 @@ for ( let i = start ; i <= end1 ; i++)
 
 5-2) 1부터 20까지 숫자 중 3의 배수를 출력에 제외하세요.
 ```
-
+출력값:
+1 
+2 
+4 
+5 
+7 
+8 
+10 
+11 
+13 
+14 
+16 
+17 
+19 
+20
 ```
 
+내 답
+```
+const start = 1;
+const end1 = 10;
+const end2 = 20;
+const str = "javascript";
+const keyword = "a";
+for ( let i = start ; i <= end2 ; i++)
+{
+    if(i % 3 !==0) {
+    console.log(i)
+    }
+}
+```
+
+5-3) 문자열 "javascript"의 각 문자를 한 줄씩 출력 중 'a'만 제외하세요.
+```
+출력값:
+j
+v
+s
+c
+r
+i
+p
+t
+```
+
+내 답
+```
+
+```
