--- a/20251222/6교시(Q).md
+++ b/20251222/6교시(Q).md
@@ -95,7 +95,7 @@ const str = "javascript";
 const keyword = "a";
 for ( let i = start ; i <= end1 ; i++)
 {
-    if( i % 2 !==0) {
+    if( i % 2 !=== 0) {
         console.log(i)
     }
 }
@@ -129,7 +129,7 @@ const str = "javascript";
 const keyword = "a";
 for ( let i = start ; i <= end2 ; i++)
 {
-    if(i % 3 !==0) {
+    if(i % 3 !=== 0) {
     console.log(i)
     }
 }
@@ -148,7 +148,36 @@ p
 t
 ```
 
-내 답
+다른 사람들 답
 ```
+let strg = "javascript";
+for(const c of strg){
+    if(c === "a"){
+    continue;
+    }
+    else{
+    console.log(c);
+    }
+}
+```
+```
+let str = "javascript";
 
+for (let i = 0; i < str.length; i++) {
+    if (str[i] === 'a') continue;
+    console.log(str[i]);
+}
+```
+```
+for(const s of str) {
+    if( s == "a") continue; 
+    console.log(s);
+}
+```
+```
+for(const s of str)
+{
+    if(s === keyword) continue;
+    console.log(s);
+}
 ```
