--- a/20251222/6교시(Q).md
+++ b/20251222/6교시(Q).md
@@ -75,6 +75,7 @@ for ( let i = 0 ; i < 10; i++)
 
  
 <h3>문제</h3>
+문제5)for문 이용하여 출력하세요, 단 ***continue*** 사용하세요.
 5-1) 1부터 10까지 숫자 중 홀수만 출력하세요.
 
 ```
@@ -109,7 +110,7 @@ const str = "javascript";
 const keyword = "a";
 for ( let i = start ; i <= end1 ; i++)
 {
-    if( i % 2 ===0) continue
+    if( i % 2 === 0) continue
     {
         console.log(i)
     }
