--- a/20251222/6교시(Q).md
+++ b/20251222/6교시(Q).md
@@ -110,10 +110,8 @@ const str = "javascript";
 const keyword = "a";
 for ( let i = start ; i <= end1 ; i++)
 {
-    if( i % 2 === 0) continue
-    {
-        console.log(i)
-    }
+    if( i % 2 === 0) continue;
+        console.log(i);
 }
 ```
 
@@ -136,7 +134,7 @@ for ( let i = start ; i <= end1 ; i++)
 20
 ```
 
-내 답
+내 답(오답)
 ```
 const start = 1;
 const end1 = 10;
@@ -145,9 +143,22 @@ const str = "javascript";
 const keyword = "a";
 for ( let i = start ; i <= end2 ; i++)
 {
-    if(i % 3 !=== 0) {
+    if(i % 3 !== 0) {
     console.log(i)
     }
+}
+```
+
+정답
+```
+const start = 1;
+const end1 = 10;
+const end2 = 20;
+const str = "javascript";
+const keyword = "a";
+for( let i = start; i <= end2; i++) {
+    if(i % 3 == 0) continue;
+    console.log(i);
 }
 ```
 
@@ -185,15 +196,17 @@ for (let i = 0; i < str.length; i++) {
 }
 ```
 ```
-for(const s of str) {
-    if( s == "a") continue; 
-    console.log(s);
-}
-```
-```
 for(const s of str)
 {
     if(s === keyword) continue;
     console.log(s);
 }
 ```
+정석 답
+```
+for(const s of str) {
+    if( s == "a") continue; 
+    console.log(s);
+}
+```
+
