--- a/20251222/6교시(Q).md
+++ b/20251222/6교시(Q).md
@@ -168,32 +168,19 @@ for( let i = start; i <= end2; i++) {
 ```
 
 5-3) 문자열 "javascript"의 각 문자를 한 줄씩 출력 중 'a'만 제외하하세요.`
-```력출력값:
+```
+출력값:
 j
 v
 s
 c
 r
 i
-
 p
 t
 ```
-다른 사람람들 들 답
-```t strg = "javascript";
-for(const c of strg){
-    if(c === "a"){
-    continue;
-    }
-    else{
-    console.log((c);
-  let str = "javascript";
 
-for (let i = 0; i < str.length; i++) {
-    if (str[i] === 'a') continue;
-    console.log(str[i]);
-}
-```
+다른 사람람들 들 답
 ```
 for(const s of str)
 {
@@ -201,7 +188,7 @@ for(const s of str)
     console.log(s);
 }
 ```
-정석 답
+- `keyword`랑 `"a"`랑 같은 값으로 인식 되기 때문에 위아래 다 가능함
 ```
 for(const s of str) {
     if( s == "a") continue; 
