--- a/20251223/1교시.md
+++ b/20251223/1교시.md
@@ -1,1 +1,3 @@
+어제 했던 문제의 근본적인거 (코드를 외우지 않는 방법)
+<img width="639" height="331" alt="image" src="https://github.com/user-attachments/assets/9bcbec3d-e70c-4693-b297-55cdc9070e27" />
 
