--- a/20251223/1교시.md
+++ b/20251223/1교시.md
@@ -17,3 +17,6 @@ if ( i == 9 ) console.log(i);
 
 1부터 20까지 3의 배수를 제외하고 출력하시오.
 <img width="1920" height="1080" alt="image" src="https://github.com/user-attachments/assets/565a524c-3fb6-4690-9216-1015ab1415cc" />
+
+javascript에서 "a"를 제외하고 출력하시오.
+<img width="1920" height="1080" alt="image" src="https://github.com/user-attachments/assets/0fbed82c-f6cb-4339-a552-db8baf0a4174" />
