--- a/20251223/1교시.md
+++ b/20251223/1교시.md
@@ -24,3 +24,7 @@ if ( i == 9 ) console.log(i);
 
 javascript에서 "a"를 제외하고 출력하시오.
 <img width="1920" height="1080" alt="image" src="https://github.com/user-attachments/assets/0fbed82c-f6cb-4339-a552-db8baf0a4174" />
+
+만약 코드값이 너무 어렵다면 **자동의사코드**로 보면 됨
+글로 풀어쓰듯이 알려줌
+<img width="960" height="520" alt="image" src="https://github.com/user-attachments/assets/00b8c1d4-8493-4e3b-b91f-7215a6bdcb60" />
