--- a/20251223/4교시.md
+++ b/20251223/4교시.md
@@ -50,6 +50,21 @@ const arr3 = [
 - 질문: 인덱스값 계산 원리
 <img width="705" height="443" alt="image" src="https://github.com/user-attachments/assets/43a9dca7-7c1a-480e-be8c-f30db291273f" />
 
+```
+let 문자 = 'F';
+let 답 = '';
+
+for (let i = 0; i < a.length; i++) {
+  for (let j = 0; j < a[i].length; j++) {
+    if (a[i][j] === 문자) {
+      답 = [i, j];
+    }
+  }
+}
+
+console.log(찾는 문자 : ${문자}, 인덱스 값 : ${답});
+```
+
 최윤우
 ```
 /** 3) 지뢰 찾기 (안전 지대 확인) O은 안전한 곳, X는 지뢰가 매설된 곳, 지뢰의 위치 좌표[행,열]를 출력하세요
@@ -101,11 +116,51 @@ const arr1 = [
 const arr2 = [
   [96,42,61,75],
   [13,32,74,55],
+  [],
   [58,88,26,103],
-  [24,51,124,131]
-  [-1,-3,-5,-7,-2]
+  [24,51,124,131],
+  [-1,-3,-5,-7,-2],
+  []
 ];
 ```
 - 선생님 피드백: 빈배열이 있다면 터질 수 있다. (마이너스값들 밑에 빈애들 들어오면 `arr2[i][0]0-1`에서 터짐
 - 선생님 피드백: 
 <img width="276" height="202" alt="image" src="https://github.com/user-attachments/assets/61be3f87-8272-47b4-984e-32895bf39387" />
+바꾼 답
+- 빈배열 터지는거 수정 ver.
+- 
+<img width="281" height="166" alt="image" src="https://github.com/user-attachments/assets/ea27f679-e00c-4062-8000-7ac705fb1527" />
+
+남영준
+```
+/** 9) 2차원 배열을 이용하여 2, 4번째 열의 합의 값을 구하시오.
+ * 출력값 :
+ * 2번째 열의 합 : (2 + 6 + 10) > 18
+ * 4번째 열의 합 : (4 + 8 + 12) > 24
+ * 최종 합 : 42
+ ****************/
+const arr4 = [
+  [1,2,3,4],
+  [5,6,7,8],
+  [9,10,11,12]
+];
+```
+- `arr2D[k].length`에 `[k]`를 넣어주고 꺾새를 `>=`가 아닌 `>`를 넣어줘야 됨
+  - 왜? `>=`를 넣어버리면 하나의 숫자만 있는 배열이 있을 경우 포함이 되기 때문에 오류가 생김
+<img width="324" height="259" alt="image" src="https://github.com/user-attachments/assets/baeacebf-67e9-4a4b-ba9b-750b5689b3b7" />
+
+장태원
+```
+/** 10) 배열의 값을 이용하여 출석 체크 수를 구하시오.
+ * 출력값 :
+ * 전체 출석 수 : 14
+ ****************/
+const arr5 = [
+  [1,0,1,1,0,1],
+  [1,1,1,1,1,1],
+  [0,1,1,1,0,1]
+];
+```
+
+<img width="488" height="389" alt="image" src="https://github.com/user-attachments/assets/6508f66a-9b22-4ef1-a437-d49c6a057c83" />
+
