--- a/20251224/1교시.md
+++ b/20251224/1교시.md
@@ -16,3 +16,81 @@ document.getElementsByTagName("section")[0];
 콘솔에 다음과 같이 입력: 
 document.getElementsByTagName("section")[0].innerHTML = '<div class="bg2"></div>';
 이렇게 했을 때 25번을 반복해야 되니까 for문을 사용하는걸 과제로 주심
+
+index.html
+```
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://avatars.githubusercontent.com/u/240833631?s=200&v=4" rel="icon" type="image/x-icon">
+    <title>JS</title>
+    <link href="./index.css" rel="stylesheet">
+</head>
+<body>
+  <main>
+    <section>
+      <!-- <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div> -->
+    </section>
+  </main>
+  <script src="./study01.js"></script>
+</body>
+</html>
+```
+
+study01.js
+```
+console.log("스터디01")
+var html = "";
+
+//반복문 실행
+for(let i = 0; i < 25; i++ ) {
+    html += `<div class="bg${ i % 2 === 0 ? `2` : `1` }"></div>`;
+}
+
+document.getElementsByTagName("section")[0].innerHTML = html;
+```
+
+만약 위에 코드가 직관적이지 않으면 아래와 같이 실행해도 됨
+```
+console.log("스터디01")
+var html = "";
+
+//반복문 실행
+for(let i = 0; i < 25; i++ ) {
+    let css = "1";
+    if(i % 2 === 0) css = "2"
+        html += `<div class="bg${ css }"></div>`;
+}
+
+document.getElementsByTagName("section")[0].innerHTML = html;
+```
