--- a/20251224/1교시.md
+++ b/20251224/1교시.md
@@ -1,23 +1,23 @@
-파일 다운 받으라고 구글 드라이브에 경로 주신 뒤 VS Code에서 실행
-경로: https://drive.google.com/drive/folders/18Ndju2Yuw9NB82O4j1veLeIyOYgxMQ5O
+파일 다운 받으라고 구글 드라이브에 경로 주신 뒤 VS Code에서 실행<br />
+경로: https://drive.google.com/drive/folders/18Ndju2Yuw9NB82O4j1veLeIyOYgxMQ5O<br />
 
-index.html과 index.css 그리고 study01.js를 연결시키기 위해
-index.html에서 `<script src="./study01.js"></script>`를 추가시킴
-화면 띄웠을 때 F12 누르면 "스터디01" 이라고 나와있음
-화면 제어를 `.js` 폴더에서 할 것
-index.html에서 section부분을 다 비활성화 시킴 -> 화면에 아무것도 안 뜸
-화면 콘솔에 `document`라고 입력 -> 화면이 파란색으로 선택(?)됨 (화면이 문서라는 뜻. 화면을 control하고 시픙면 document를 control해야함)
-`document.location` 입력+enter *(여기서 뭐 확인하라는건지 놓침..)*
-`document.getElementsByTagName();` 까지 입력하면 qualifiedName이랑 localName이 들어가야 되는데(마우스 갖다대면 뭐 쓰라고 나옴) 얘네는 문자열이기 때문에 큰따움표를 써야 됨
-document.getElementsByTagName("section"); 입력시 뜨는 HTMLCollection이 배열이라는 뜻
-배열을 제대로 선택하려면 아래와 같이 입력해야 함
-document.getElementsByTagName("section")[0];
-이제 여기서 index.html에 있는 첫번째 tag `<div class="bg2"></div>`를 가져오려함
-콘솔에 다음과 같이 입력: 
-document.getElementsByTagName("section")[0].innerHTML = '<div class="bg2"></div>';
-이렇게 했을 때 25번을 반복해야 되니까 for문을 사용하는걸 과제로 주심
-
-index.html
+index.html과 index.css 그리고 study01.js를 연결시키기 위해<br />
+index.html에서 `<script src="./study01.js"></script>`를 추가시킴<br />
+화면 띄웠을 때 F12 누르면 "스터디01" 이라고 나와있음<br />
+화면 제어를 `.js` 폴더에서 할 것<br />
+index.html에서 section부분을 다 비활성화 시킴 -> 화면에 아무것도 안 뜸<br />
+화면 콘솔에 `document`라고 입력 -> 화면이 파란색으로 선택(?)됨 (화면이 문서라는 뜻. 화면을 control하고 시픙면 document를 control해야함)<br />
+`document.location` 입력+enter *(여기서 뭐 확인하라는건지 놓침..)*<br />
+`document.getElementsByTagName();` 까지 입력하면 qualifiedName이랑 localName이 들어가야 되는데(마우스 갖다대면 뭐 쓰라고 나옴) 얘네는 문자열이기 때문에 큰따움표를 써야 됨<br />
+document.getElementsByTagName("section"); 입력시 뜨는 HTMLCollection이 배열이라는 뜻<br />
+배열을 제대로 선택하려면 아래와 같이 입력해야 함<br />
+document.getElementsByTagName("section")[0];<br />
+이제 여기서 index.html에 있는 첫번째 tag `<div class="bg2"></div>`를 가져오려함<br />
+콘솔에 다음과 같이 입력: <br />
+document.getElementsByTagName("section")[0].innerHTML = '<div class="bg2"></div>';<br />
+이렇게 했을 때 25번을 반복해야 되니까 for문을 사용하는걸 과제로 주심<br />
+<br />
+index.html<br />
 ```
 <!DOCTYPE html>
 <html lang="ko">
