--- a/20251224/1교시.md
+++ b/20251224/1교시.md
@@ -173,6 +173,7 @@ index.html
 
 <h3> 함수 이용하기 </h3>
 index.html
+
 ```
 <!DOCTYPE html>
 <html lang="ko">
@@ -246,6 +247,7 @@ function f1() {
 ```
 
 <h3> 그리기 기능 사용하기 </h3>
+
 index.html
 ```
 <!DOCTYPE html>
@@ -295,4 +297,80 @@ index.html
   </main>
 </body>
 </html>
+```
+
+<h3> 비우기 개념 사용하기 </h3>
+
+index.html
+```
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://avatars.githubusercontent.com/u/240833631?s=200&v=4" rel="icon" type="image/x-icon">
+    <title>JS</title>
+    <link href="./index.css" rel="stylesheet">
+    <script src="./study01.js"></script>
+</head>
+<body onload="load()">
+  <main>
+        <button type="button" onclick="load()">그리기</button>
+        <button type="button" onclick="clean()">비우기</button>
+    <section>
+      <!-- <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div>
+      <div class="bg1"></div>
+      <div class="bg2"></div> -->
+    </section>
+  </main>
+</body>
+</html>
+```
+
+study.js
+```
+console.log("스터디01")
+function load() {
+var html = "";
+
+//반복문 실행
+for(let i = 0; i < 25; i++ ) {
+    let css = "1";
+    if(i % 2 === 0) css = "2"
+        html += `<div class="bg${ css }"></div>`;
+}
+
+document.getElementsByTagName("section")[0].innerHTML = html;
+}
+
+function clean() {
+    console.log("clean()")
+    document.getElementsByTagName("section")[0].innerHTML = "";
+}
 ```
