--- a/20251226/1교시.md
+++ b/20251226/1교시.md
@@ -100,3 +100,14 @@ module.exports = { a, b };
 이렇게하면 터미널에 `npm run start` 입력시 true false 그대로 잘 나옴
 
 <h3> Commonjs를 배우긴 하지만 이게 메인은 아님 우리는 ES를 쓸 것 </h3>
+
+그럼 ESM을 사용하기 위해 
+https://nodejs.org/ko > 여기서 코드 복사해 index.js에 복붙
+package.json의 `type`을 `module`로 바꾸면 됨
+
+`Listening on 127.0.0.1:3000`: 요청 대기 상태 (웹에서 request랑 respond가 있는데 respond가 GOlive했을 때 HELLO WORLD를 출력하는 것
+- 신기한거: `res.end('')`안의 글자를 바꾼다고 해서 출력되는 내용이 바로 바뀌지 않음
+- 터미널에서 `ctrl`+`ctrl`로 작업을 끝낸 뒤 GOlive하면 내용이 바뀜
+- `<h1>` 같은 태그가 바뀌지 않는 이유도 `content-type`이 `text/plain`으로 되어 있기 때문
+- 왜? HTML 처럼 UTF-8 같은게 설정되어 있지 않고 plain text로는 태그를 인식할 수 없기 때문
+- 단, 바꿀 수 있는 방법 있음
