--- a/20251226/1-3교시.md
+++ b/20251226/1-3교시.md
@@ -1,8 +1,8 @@
 node.js
 react 사용시 보조도구일 뿐 얘에 대해 딥하게 알 필요 없음
 
-npm이란?
-node package manager
+npm이란?<br />
+node package manager<br />
 <img width="412" height="502" alt="image" src="https://github.com/user-attachments/assets/fef5f41f-6e8e-4f83-81aa-42f806351bc0" />
 <img width="342" height="272" alt="image" src="https://github.com/user-attachments/assets/49859291-7c92-4e04-bada-ae1b6c3b3245" />
 
