--- a/20251226/1-3교시.md
+++ b/20251226/1-3교시.md
@@ -7,13 +7,13 @@ node package manager<br />
 <img width="342" height="272" alt="image" src="https://github.com/user-attachments/assets/49859291-7c92-4e04-bada-ae1b6c3b3245" />
 
 
-https://github.com/ESG-EDU/WEB_STUDY/tree/main/frontend/node
+https://github.com/ESG-EDU/WEB_STUDY/tree/main/frontend/node<br />
 문법이랑 차이법 중요.
 
-`npm -v`
-기본 type `Commonjs`인데 `ES`로 바꿀 것
+`npm -v`<br />
+기본 type `Commonjs`인데 `ESM`로 바꿀 것 (왜? ESM이 더 자주 쓰이니까)
 
-`scripts`안에 `test`가 있기 때문에 `npm run`만 하면 안되고 `npm run test`해야 화면 정상 출력
+`scripts`안에 `test`가 있기 때문에 `npm run`만 하면 안되고 `npm run test`해야 터미널에서 정상 출력
 ```
 D:\IDE\workspaces\study\20251226>npm run
 Lifecycle scripts included in 20251226@1.0.0:
@@ -53,7 +53,7 @@ console.log("NPM 출력");
 - 어떻게? `npm i nodemon` 입력해서
 - 어디에? `dir` 쳤을 때 `package.json`이 있는 곳에
   - `dir`쳤을 때 `node_modules` 폴더가 새로 생겨야 함
-**- 정리: 각 프로젝트마다 패키지를 설치해서 관리하고 있다.**
+**- 정리: 각 프로젝트(refering to folder 20251226)마다 패키지를 설치해서 관리하고 있다.**
 
 ```
   "scripts": {
