--- a/20251226/1-3교시.md
+++ b/20251226/1-3교시.md
@@ -10,7 +10,7 @@ node package manager<br />
 https://github.com/ESG-EDU/WEB_STUDY/tree/main/frontend/node<br />
 문법이랑 차이법 중요.
 
-`npm -v`<br />
+`npm -v`: “Node.js라는 운영체제 프로그램이 제대로 설치되어 있는지 확인하는 행위”다.<br />
 기본 type `Commonjs`인데 `ESM`로 바꿀 것 (왜? ESM이 더 자주 쓰이니까)
 
 `scripts`안에 `test`가 있기 때문에 `npm run`만 하면 안되고 `npm run test`해야 터미널에서 정상 출력
