--- a/20251229/1교시.md
+++ b/20251229/1교시.md
@@ -1,1 +1,55 @@
+https://nodejs.org/ko
+https://ko.react.dev/
+https://www.w3schools.com/react/default.asp
 
+vite가 빨라서 얘로 처음 React 앱 설치
+
+하지만 다 해보기 위해 다른걸로도 해봄
+- 얜 `.json`이랑 `.js` 변환 따로 안해도 돼서 commonjs가 아닌 ESM인 `module`임을 알 수 있음
+- public 폴더에 있는 index.html 이 대문 = 브라우저 이다
+- Javascript가 화면제어를 한다는걸 알 수 있는 것도 여기임
+  - `<div id="root"></div>
+  - 그리고 얠 찾으려면 명령어 `.document`를 찾아야 함
+  - 위치: src > index.js
+    - document.getElementById('root')); -> 이전에 innerHTML 쓴거랑 비슷한 함수형 (개념이 같음)
+    `const root = ReactDOM.createRoot(document.getElementById('root'));`
+  - JSX: Javascipt 영역에서 HTML이랑 css를 넣을 수 있음
+  - `App.js`에 있는걸 찾아가게끔 index.js에 코드를 넣어줌
+    ```
+    return (
+    <div className="App">
+      <header className="App-header">
+        <img src={logo} className="App-logo" alt="logo" />
+        <p>
+          Edit <code>src/App.js</code> and save to reload.
+        </p>
+        <a
+          className="App-link"
+          href="https://reactjs.org"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Learn React
+        </a>
+      </header>
+    </div>
+  );
+  ```
+  특이사항: className
+    - 왜? Javascript에서 class 이미 사용하니까 저렇게 씀
+  특이사항: <img src={logo}
+    - `{}`: 표현식, `$`표시 안 넣음, 변수를 저렇게 넣어서 사용함, 이미지 주소 안 넣어도 됨 //JSX기 때문에 가능
+  특이사항: return 안에 있는 코드를 다 지워버리면/문법 에러가 나면 실제 화면에서도 뭔가 잘못 되었다는게 감지 되어 에러가 뜸
+  <img width="840" height="448" alt="image" src="https://github.com/user-attachments/assets/d13ed570-5862-4c42-a486-99aadc9b9910" />
+그럼 안에 태그를 이용해서 채워주면 화면이 다시 잘 보임
+```
+  return (
+    <>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    </>
+  );
+```
