--- a/20251229/1교시.md
+++ b/20251229/1교시.md
@@ -14,7 +14,8 @@ vite가 빨라서 얘로 처음 React 앱 설치
     - document.getElementById('root')); -> 이전에 innerHTML 쓴거랑 비슷한 함수형 (개념이 같음)
     `const root = ReactDOM.createRoot(document.getElementById('root'));`
   - JSX: Javascipt 영역에서 HTML이랑 css를 넣을 수 있음
-  - `App.js`에 있는걸 찾아가게끔 index.js에 코드를 넣어줌
+  - `App.js`에 있는걸 찾아가게끔 `index.js`에 코드를 넣어줌
+
     ```
     return (
     <div className="App">
@@ -33,15 +34,17 @@ vite가 빨라서 얘로 처음 React 앱 설치
         </a>
       </header>
     </div>
-  );
+     );
   ```
-  특이사항: className
-    - 왜? Javascript에서 class 이미 사용하니까 저렇게 씀
-  특이사항: <img src={logo}
-    - `{}`: 표현식, `$`표시 안 넣음, 변수를 저렇게 넣어서 사용함, 이미지 주소 안 넣어도 됨 //JSX기 때문에 가능
-  특이사항: return 안에 있는 코드를 다 지워버리면/문법 에러가 나면 실제 화면에서도 뭔가 잘못 되었다는게 감지 되어 에러가 뜸
-  <img width="840" height="448" alt="image" src="https://github.com/user-attachments/assets/d13ed570-5862-4c42-a486-99aadc9b9910" />
+  
+특이사항: className
+  - 왜? Javascript에서 class 이미 사용하니까 저렇게 씀
+특이사항: <img src={logo}
+  - `{}`: 표현식, `$`표시 안 넣음, 변수를 저렇게 넣어서 사용함, 이미지 주소 안 넣어도 됨 //JSX기 때문에 가능
+특이사항: return 안에 있는 코드를 다 지워버리면/문법 에러가 나면 실제 화면에서도 뭔가 잘못 되었다는게 감지 되어 에러가 뜸
+<img width="840" height="448" alt="image" src="https://github.com/user-attachments/assets/d13ed570-5862-4c42-a486-99aadc9b9910" />
 그럼 안에 태그를 이용해서 채워주면 화면이 다시 잘 보임
+
 ```
   return (
     <>
